@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.64 2000/06/11 17:26:04 stelian Exp $
+$Id: CHANGES,v 1.65 2000/06/25 18:42:39 stelian Exp $
 
 Changes between versions 0.4b17 and 0.4b18 (released ??????????????)
 ====================================================================
@@ -11,6 +11,13 @@ Changes between versions 0.4b17 and 0.4b18 (released ??????????????)
 	'cat DUMPFILE | restore -i -f -' from working. Thanks
 	to Charles Karney <karney@users.sourceforge.net>
 	for the bug report.
+
+3.	Changed a few "panic" into "exit", causing restore to
+	be more stable against some attacks (like the last one
+	reported on Bugtraq, although the last version of restore
+	was not vulnerable - just dumped core). Thanks to
+	Andreas Hasenack <andreas@conectiva.com.br> for reporting
+	the bugs to me.
 
 Changes between versions 0.4b16 and 0.4b17 (released June 1st, 2000)
 ====================================================================
